[tool.poetry]
name = "repl-nix-dijkstra"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_dijkstra"}]

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
